# algorithm_learning

gps_imu_fusion_gtsam/: CMakeLists.txt  README.md  gen_sim_data.h  main.cpp  motion_interpolator.h  pre_integration_data_preparer.cpp  pre_integration_data_preparer.h  type.h
model_predictive_control/: CMakeLists.txt  main.cpp  readme.md  实验结果.md
serial_plot_tool/: READEME.md  README.md  Serial_Tool.pro  Serial_Tool_zh_CN.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui
